<resources>
    <string name="app_name">ReNote</string>
    <string name="menu_akun">Account</string>
    <string name="menu_catatan">Notes</string>
    <string name="menu_rekening">Account</string>
    <string name="menu_laporan">Reports</string>
    <string name="icon_calendar">Calendar</string>

    <string name="input_pemasukan">Income\n0</string>
    <string name="input_pengeluaran">Expense\n0</string>
    <string name="input_total">Total\n0</string>

    <string name="riwayat">History</string>
    <string name="kategori">Category</string>
    <string name="deskripsi_transaksi">Transaction Description</string>
    <string name="jumlah_nominal">Nominal Amount</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="tambah">Add</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="back_icon">Back Icon</string>
    <string name="buat">Create</string>
    <string name="tanggal">Select Date</string>
    <string name="hasil_scan">Scan Result</string>
    <string name="pengeluaran">Expense</string>
    <string name="pemasukan">Income</string>
    <string name="total_saldo">Rp. 0</string>
    <string name="total_saldo_rekening">Rp. %1$s</string>
    <string name="tittle_totalSaldo">Total Balance</string>
    <string name="nama_rekening">Account Name</string>
    <string name="jumlah_rekening">Account Total</string>
    <string name="edit">Save</string>
    <string name="laporan_bulanan">Month 2024</string>
    <string name="diagram_lingkaran">Pie Chart</string>
    <string name="persentase">100%</string>
    <string name="tentang">About</string>
    <string name="ganti_bahasa">Change Language</string>
    <string name="ganti_tema">Change Theme</string>
    <string name="profile">Profile</string>
    <string name="profile_gambar">Profile Picture</string>
    <string name="simpan">Save</string>
    <string name="edit_rekening">Edit Account</string>
    <string name="edit_catatan">Edit Note</string>
    <string name="hapus">Delete</string>
    <string name="my_rekening">My Account</string>
    <string name="date_display">%1$s %2$s</string>

    <string name="pemasukan_text">Income\n Rp %1$s</string>
    <string name="pengeluaran_text">Expense\n Rp %1$s</string>

    <string name="date_format">%1$d/%2$d/%3$d</string>
    <string name="status_active">Active</string>

    <string name="pilih_bulantahun">Calendar</string>
    <string name="bulan">Month</string>
    <string name="bantuan">Help</string>
    <string name="back_button">Back Button</string>
    <string name="foto_profile">Profile Photo</string>
    <string name="ganti_gambar">Change Picture</string>
    <string name="masukkan_nama">Enter Name</string>
    <string name="gmail">Gmail</string>
    <string name="masukkan_gmail">Enter Gmail</string>
    <string name="nama">Name</string>
    <string name="logout">Logout</string>
    <string name="bahasa">Language</string>
    <string name="aplikasi_logo">App Logo</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="piggybank">by Piggybank</string>

    <string name="welcome">Welcome</string>
    <string name="desc_welcome">
        Record All Your Expenses and Become
        \nA Frugal Person
    </string>
    <string name="logo_matahari">Sun Logo</string>
    <string name="logo_book">Book Logo</string>
    <string name="slider">Slider</string>
    <string name="daftar_akun">Register Account</string>
    <string name="logo_google">Google Logo</string>
    <string name="deskripsi_daftar_akun">
        Register your account via Gmail
    </string>
    <string name="deskripsi_rinci">
        Let\'s register for the ReNote app
        Manage your finances, record your finances,
        adjust to your heart\'s desire
    </string>
    <string name="data_diri">Personal Data</string>
    <string name="pemasukan_desc">
        You can also record income
        \naccording to the original calendar
    </string>
    <string name="image_second">Image Second</string>

    <string name="no_internet">No Internet Connection</string>
    <string name="foto_diambil">Photo Taken</string>
    <string name="notifikasi">Notification</string>
    <string name="atur_waktu">00:00</string>
    <string name="isi_text_notifikasi">Notification Text</string>
    <string name="atur_notifikasi">Set Notification</string>
    <string name="deskripsi_jam">Clock Description</string>
    <string name="atur_waktu_pengingat">Set Reminder Time</string>
    <string name="hentikan_notifikasi">Stop Notification</string>
    <string name="butuh_bantuan">Need Help?</string>
    <string name="send_button">Send Message</string>
    <string name="tanggal_pengirim" translatable="false">Tanggal Pengirim</string>
    <string name="teks_chat" translatable="false">Teks Chat</string>
    <string name="foto_crop">Crop Foto</string>

</resources>
