<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back_button"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/black"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:id="@+id/titleNotifikasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notifikasi"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/labelPengingat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/atur_waktu_pengingat"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/atur_waktu"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/clock" />

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/isi_text_notifikasi"
            android:inputType="text"
            android:minHeight="48dp"
            android:autofillHints="username"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="VisualLintTextFieldSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/cancelAlarmButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_brown"
                android:gravity="center"
                android:text="@string/hentikan_notifikasi"
                android:textColor="#5D4037"
                android:textSize="14sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/setAlarmButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_brown"
                android:gravity="center"
                android:text="@string/atur_notifikasi"
                android:textColor="#5D4037"
                android:textSize="14sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
