<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.rekening.TambahRekening">

    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_icon"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/title_tambah_rekening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tambah"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_tambah_rekening"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/input_nama_rekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="name"
            android:background="@drawable/edit_text_stroke"
            android:hint="@string/nama_rekening"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/input_jumlah_rekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="money"
            android:background="@drawable/edit_text_stroke"
            android:hint="@string/jumlah_rekening"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/button_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/rounded_button_simpanedit"
            android:text="@string/buat"
            android:textColor="#5D4037" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
